--- a/espol-theme/lms/templates/navigation.html
+++ b/espol-theme/lms/templates/navigation.html
@@ -7,6 +7,7 @@ from django.utils.translation import ugettext as _
 from django.core.urlresolvers import reverse
 
 from openedx.core.djangoapps.user_api.accounts.image_helpers import get_profile_image_urls_for_user
+from openedx.core.djangoapps.lang_pref.api import header_language_selector_is_enabled, released_languages 
 from lms.djangoapps.ccx.overrides import get_current_ccx
 from openedx.core.djangolib.markup import HTML, Text
 
