--- a/lms/templates/index.html
+++ b/lms/templates/index.html
@@ -1,28 +1,12 @@
-## mako
 <%page expression_filter="h"/>
 <%inherit file="main.html" />
 <%namespace name='static' file='static_content.html'/>
 <%!
 from django.utils.translation import ugettext as _
 from django.core.urlresolvers import reverse
+
 from openedx.core.djangolib.markup import HTML, Text
 %>
-
-<%block name="headextra">
-<link rel="stylesheet" type="text/css" href="${static.url('css/slick.css')}"/>
-</%block>
-
-<%block name="js_extra">
-<script type="text/javascript">
-  $(window).load(function () {
-    $(".more-about-btn").removeClass("hidden");
-    if (getParameterByName('next')) {
-      $('#login').trigger("click");
-    }
-  })
-</script>
-<script type="text/javascript" src="${static.url('js/slick.min.js')}"></script>
-</%block>
 
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="home">
@@ -32,11 +16,11 @@ from openedx.core.djangolib.markup import HTML, Text
             <div class="heading-group">
               % if homepage_overlay_html:
                 ${homepage_overlay_html | n, decode.utf8}
-              % else:
+             % else:
                   ## Translators: 'Open edX' is a registered trademark, please keep this untranslated. See http://open.edx.org for more information.
-                  <h1>Bienvenido a la plataforma <b>ESPOL Virtual</b></h1>
+                  <h1>"Bienvenido a la plataforma <b>ESPOL Virtual</b>"</h1>
                   ## Translators: 'Open edX' is a registered trademark, please keep this untranslated. See http://open.edx.org for more information.
-                  <p>Estudia en cualquier lugar y en cualquier momentsso</p>
+                  <p>"Estudia en cualquier lugar y en cualquier momento"</p>
               % endif
             </div>
             % if settings.FEATURES.get('ENABLE_COURSE_DISCOVERY'):
@@ -69,27 +53,29 @@ from openedx.core.djangolib.markup import HTML, Text
     </section>
 </main>
 
-  <section class="about-section">
-    <div class="about-container"></div>
-  </section>
-</section>
-
 % if show_homepage_promo_video:
-<section id="video-modal" class="modal modal-custom custom-video-modal">
-  <div class="inner-wrapper">
-    <iframe title="YouTube Video" width="640" height="360"
-            src="//www.youtube.com/embed/${homepage_promo_video_youtube_id}?showinfo=0" frameborder="0"
-            allowfullscreen></iframe>
-  </div>
-</section>
+  <section id="video-modal" class="modal home-page-video-modal video-modal">
+    <div class="inner-wrapper">
+      <iframe title="YouTube Video" width="640" height="360" src="//www.youtube.com/embed/${homepage_promo_video_youtube_id}?showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </section>
 % endif
+
+<%block name="js_extra">
+   <script type="text/javascript">
+      $(window).load(function() {
+         if(getParameterByName('next')) {
+              $('#login').trigger("click");
+         }
+      })
+   </script>
+</%block>
 
 % if show_signup_immediately is not UNDEFINED:
-## NOTE: This won't work in production, because anonymous views are cached, so it will
-## show either with or without this extra js for 3 minutes at a time.
+  ## NOTE: This won't work in production, because anonymous views are cached, so it will
+  ## show either with or without this extra js for 3 minutes at a time.
 <script type="text/javascript">
-  $(window).load(function () {
-    $('#signup_action').trigger("click");
-  });
+  $(window).load(function() {$('#signup_action').trigger("click");});
 </script>
 % endif
+ 
