--- a/edx-platform/edxapp-espol/lms/templates/navigation.html
+++ b/edx-platform/edxapp-espol/lms/templates/navigation.html
@@ -78,7 +78,7 @@ site_status_msg = get_site_status_msg(course_id)
         <%block name="navigation_global_links_authenticated">
           % if settings.FEATURES.get('COURSES_ARE_BROWSABLE') and not show_program_listing:
             <li class="item nav-global-01">
-              <a href="${marketing_link('COURSES')}">${_('Explore coursessassdasad')}</a>
+              <a href="${marketing_link('COURSES')}">${_('Explore courses')}</a>
             </li>
           % endif
           % if show_program_listing:
