--- a/edx-platform/edxapp-espol/lms/static/sass/lms-main-v1.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/lms-main-v1.scss
@@ -1,21 +1,14 @@
 // LMS - CSS application architecture
-// Version 1 styling (pre-Pattern Library)
 // ====================
 
-// libs and resets *do not edit*
-@import 'bourbon/bourbon'; // lib - bourbon
-@import 'vendor/bi-app/bi-app-ltr'; // set the layout for left to right languages
+// Load the LTR version
+$pattern-library-path: '../../edx-pattern-library' !default;
+@import 'edx-pattern-library/pattern-library/sass/edx-pattern-library-rtl';
+@import 'lms/static/sass/partials/base/_variables.scss';
+// @import 'variables';
 
-// BASE  *default edX offerings*
-// ====================
+// import LMS base
+@import 'lms/static/sass/lms-main-v1';
 
-// base - utilities
-@import 'base/reset';
-@import 'base/variables';
-@import 'base/mixins';
-
-// This comment is used by preprocess_assets.py to include resources from a
-// theme, for old-style deprecated theming.
-//<THEME-OVERRIDE>
-
-@import 'build-lms-v1'; // shared app style assets/rendering
+// import the custom changes
+@import "overrides";
