--- a/edx-platform/edxapp-espol/lms/static/sass/lms-main-v2.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/lms-main-v2.scss
@@ -1,21 +1,18 @@
 // ------------------------------
 // LMS main styling
-// Version 2 - introduces the Pattern Library
 
 // NOTE: This is the left-to-right (LTR) configured style compile.
 // It should mirror lms-main-v2-rtl w/ the exception of bi-app references.
-
+// ------------------------------
 
 // Load the LTR version of the edX Pattern Library
 $pattern-library-path: '../../edx-pattern-library' !default;
 @import 'edx-pattern-library/pattern-library/sass/edx-pattern-library-ltr';
+@import 'lms/static/sass/partials/base/_variables.scss';
+// @import 'variables';
 
-// base - utilities
-@import 'base/variables';
+// import LMS base
+@import 'lms/static/sass/lms-main-v2';
 
-// Load the shared build
-@import 'build-lms-v2';
-
-// Load overrides
+// import the custom changes
 @import "overrides";
-@import "accordion";
