--- a/edx-platform/edxapp-espol/lms/templates/navigation/navbar-not-authenticated.html
+++ b/edx-platform/edxapp-espol/lms/templates/navigation/navbar-not-authenticated.html
@@ -48,12 +48,17 @@ from django.utils.translation import ugettext as _
 
 <ol class="right nav-courseware list-inline">
   <%block name="navigation_sign_in">
+    <li class="item nav-courseware-02">
+      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
+        <a class="btn btn-primary" href="/login-admision${login_query()}">Iniciar sesión Estudiantes Admisiones</a>
+      % endif
+    </li>
     <li class="item nav-courseware-01">
-      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON'] and not combined_login_and_register:
+      % if not settings.FEATURES['DISABLE_LOGIN_BUTTON']:
         % if course and settings.FEATURES.get('RESTRICT_ENROLL_BY_REG_METHOD') and course.enrollment_domain:
           <a class="btn btn-login" href="${reverse('course-specific-login', args=[course.id.to_deprecated_string()])}${login_query()}">${_("Sign in")}</a>
         % else:
-          <a class="btn btn-login" href="/login${login_query()}">${_("Sign in")}</a>
+          <a class="btn btn-login" href="/login${login_query()}">${_("Sign in")} Estudiantes ESPOL</a>
         % endif
       % endif
     </li>
