--- a/edx-platform/edxapp-espol/lms/templates/user_dropdown.html
+++ b/edx-platform/edxapp-espol/lms/templates/user_dropdown.html
@@ -7,6 +7,11 @@
 self.real_user = getattr(user, 'real_user', user)
 %>
 
+## Force pattern library in header for all pages
+<%
+uses_pattern_library = True
+%>
+
 <%!
 from django.core.urlresolvers import reverse
 from django.utils.translation import ugettext as _
