transparent for all

--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -42,8 +42,8 @@ body header.header-global.slim {
 }
 
 // dashboard wrapper backgrounds
-body.view-dashboard .content-wrapper {
-  background: $transparent;
+body .content-wrapper {
+  background: $transparent !important;
 }
 
 .dashboard {
