--- a/edx-platform/edxapp-espol/lms/templates/index.html
+++ b/edx-platform/edxapp-espol/lms/templates/index.html
@@ -18,9 +18,9 @@ from openedx.core.djangolib.markup import HTML, Text
                 ${homepage_overlay_html | n, decode.utf8}
               % else:
                   ## Translators: 'Open edX' is a registered trademark, please keep this untranslated. See http://open.edx.org for more information.
-                  <h1>${Text(_(u"Welcome to the Open edX{registered_trademark} platform!")).format(registered_trademark=HTML("<sup style='font-size: 65%'>&reg;</sup>"))}</h1>
+                  <h1>"Bienvenido a la plataforma <b>ESPOL Virtual</b>"</h1>
                   ## Translators: 'Open edX' is a registered trademark, please keep this untranslated. See http://open.edx.org for more information.
-                  <p>${_("It works! This is the default homepage for this Open edX instance.")}</p>
+                  <p>"Estudia en cualquier lugar y en cualquier momento"</p>
               % endif
             </div>
             % if settings.FEATURES.get('ENABLE_COURSE_DISCOVERY'):
@@ -46,8 +46,8 @@ from openedx.core.djangolib.markup import HTML, Text
             </a>
           % endif
         </div>
-
       </header>
+
       <%include file="${courses_list}" />
 
     </section>
