Setting the correct image at the index with the correct width

--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -52,6 +52,10 @@ body .content-wrapper {
   background: $transparent !important;
 }
 
+body.index .content-wrapper {
+  max-width: none;
+}
+
 .dashboard {
   margin-top: 40px;
   padding: 20px 20px 0;
