--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -80,7 +80,8 @@
               ## can be included in the footer on other sites
               ## (e.g. a blog or marketing front-end) to provide a consistent
               ## user experience.  See the branding app for details.
-              <img alt="organization logo" src="${footer['logo_image']}">
+              <!-- <img alt="organization logo" src="${footer['logo_image']}"> -->
+              <img alt="organization logo" src="/static/edxapp-espol/images/logo-white.png">
             </a>
           </p>
 </div>
@@ -114,6 +115,11 @@
       <p>
         <a href="${footer['openedx_link']['url']}">
           <img src="${footer['openedx_link']['image']}" alt="${footer['openedx_link']['title']}" width="140" />
+        </a>
+      </p>
+      <p>
+        <a href="#">
+          <img src="/static/edxapp-espol/images/logo-small.png" alt="eduNEXT" width="82" />
         </a>
       </p>
     </div>
