--- a/edx-platform/edxapp-espol/lms/templates/static_templates/contact.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/contact.html
@@ -12,7 +12,7 @@ from django.conf import settings
 <%block name="pagetitle">${_("Contact Us")}</%block>
 
 <div class="page-heading">
-  <h1>${_("Contact Us")}</h1>
+  <!-- <h1><b>${_("Contact Us")}</b></h1> -->
 </div>
 
 <section class="static-content">
@@ -20,7 +20,7 @@ from django.conf import settings
     <div class="inner-container">
       <div class="row">
         <div class="col col-12 sm-col-10 md-col-8 lg-col-6 xl-col-6 col-centered">
-          <form id="contact_form" class="form-block">
+          <!-- <form id="contact_form" class="form-block">
             <div class="input-group">
               <label for="">Email*</label>
               <input type="text" class="input-lg" id="email">
@@ -63,7 +63,7 @@ from django.conf import settings
             <div class="input-group">
               <label for="" class="text-light">* Required Fields</label>
             </div>
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
