--- a/edx-platform/edxapp-espol/lms/templates/static_templates/honor.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/honor.html
@@ -7,85 +7,25 @@
 <%block name="pagetitle">${_("Honor Code")}</%block>
 
 <div class="page-heading">
-  <h1>${_("Honor Code")}</h1>
+  <h1><b>Código de honor</b></h1>
 </div>
 <section class="static-content">
   <div class="grid-manual grid-container">
     <div class="inner-container">
       <div class="row">
-        <div class="col col-12 sm-col-12 md-col-3">
-          <ul class="list-divided">
-            <li class="item"><a href="#collaboration-policy" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-            <li class="item"><a href="#honor-code-pledge" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-            <li class="item"><a href="#changing-the-honor-code" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-          </ul>
-        </div>
-        <div class="col col-12 sm-col-12 md-col-9">
-          <h3><strong>Effective Date:</strong> January 01, 1970</h3>
-          <h1 class="honor-code-heading">Lorem ipsum dolor sit amet, sea te quaeque.</h1>
-
-          <h2 id="collaboration-policy">Lorem ipsum dolor sit amet</h2>
+        <div class="col col-12 sm-col-12 md-col-12">
+          <!-- <h1 class="honor-code-heading">Lorem ipsum dolor sit amet, sea te quaeque.</h1> -->
+          <!-- <h2 id="collaboration-policy">Lorem ipsum dolor sit amet</h2> -->
           <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
+            Cada usuario, a quien se le asigne una cuenta, asumirá la responsabilidad única y total por las acciones realizadas a través de su cuenta.
           </p>
          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
+           La vigencia de la cuenta se mantendrá mientras el usuario permanezca vinculado a las actividades dentro de la plataforma.
           </p>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
-          <h2 id="honor-code-pledge">Lorem ipsum dolor sit amet</h2>
           <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
+            La cuenta asignada le da al usuario el privilegio de acceder a los servicios dentro de la plataforma con las restricciones propias de su perfil.
           </p>
-
-          <ul class="list-bulleted">
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-              Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue..</li>
-          </ul>
-          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-          </p>
-          <ul class="list-bulleted">
-              <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-              Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue..</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-          </ul>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
-          <h2 id="changing-the-honor-code">Lorem ipsum dolor sit amet</h2>
-          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
-          </p>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
-          <h3><strong>Effective Date:</strong> Januray 01, 1970</h3>
+          <!-- <a href="#" class="brand-link back-to-top">${_("Back to top")}</a> -->
         </div>
       </div>
     </div>
