--- a/edx-platform/edxapp-espol/lms/templates/static_templates/privacy.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/privacy.html
@@ -7,81 +7,20 @@
 <%block name="pagetitle">${_("Privacy Policy")}</%block>
 
 <div class="page-heading">
-  <h1>${_("Privacy Policy")}</h1>
+  <h1><b>Políticas de privacidad</b></h1>
 </div>
 <section class="static-content">
   <div class="grid-manual grid-container">
     <div class="inner-container">
       <div class="row">
-        <div class="col col-12 sm-col-12 md-col-3">
-          <ul class="list-divided">
-            <li class="item"><a href="#collaboration-policy" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-            <li class="item"><a href="#honor-code-pledge" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-            <li class="item"><a href="#changing-the-honor-code" class="brand-link">${_("Lorem ipsum dolor sit amet")}</a></li>
-          </ul>
-        </div>
-        <div class="col col-12 sm-col-12 md-col-9">
-          <h2 id="collaboration-policy">Lorem ipsum dolor sit amet</h2>
+        <div class="col col-12 sm-col-12 md-col-12">
           <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
+            La información de cada participante como datos personales u otros, son de exclusiva responsabilidad del usuario de la plataforma.
           </p>
          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
+          La plataforma tiene niveles de seguridad que son modificables por cada usuario deacuerdo a sus necesidades, sin embargo, se sugiere que se utilice el nivel de seguridad máximo para minimizar inconvenientes con su información personal.
           </p>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
-          <h2 id="honor-code-pledge">Lorem ipsum dolor sit amet</h2>
-          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
-          </p>
-
-          <ul class="list-bulleted">
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-              Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue..</li>
-          </ul>
-          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-          </p>
-          <ul class="list-bulleted">
-              <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-              Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue..</li>
-            <li>Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-            <li> Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.</li>
-          </ul>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
-          <h2 id="changing-the-honor-code">Lorem ipsum dolor sit amet</h2>
-          <p>
-            Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed. Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit. Est prompta deserunt senserit et, ex ubique deleniti
-            sed.
-          </p>
-          <a href="#" class="brand-link back-to-top">${_("Back to top")}</a>
-
+          <!-- <a href="#" class="brand-link back-to-top">${_("Back to top")}</a> -->
         </div>
       </div>
     </div>
