--- a/edx-platform/edxapp-espol/lms/templates/static_templates/faq.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/faq.html
@@ -5,9 +5,7 @@
 
 <%block name="pagetitle">${_("FAQ's")}</%block>
 
-<div class="page-heading">
-  <!-- <h1>${_("General FAQs")}</h1> -->
-</div>
+<div class="page-heading"></div>
 <section class="static-content">
   <div class="grid-manual grid-container">
     <div class="inner-container">
