--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -9,6 +9,23 @@
 $main-color: #001c43;
 $hover-color: #1f457b;
 $secondary-color: #eaa932;
+
+.btn-default{
+  box-sizing: border-box;
+  transition: color 0.25s ease-in-out,background 0.25s ease-in-out,box-shadow 0.25s ease-in-out;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-shadow: none;
+  font-weight: 500;
+  letter-spacing: 0;
+  box-shadow: 0 2px 1px 0 #0a4a67;
+  background: #126f9a;
+  color: #fff;
+}
 a{
   color: $main-color;
 }
@@ -95,9 +112,25 @@ h1 {
 .courses-container .courses .course .course-info .course-title{
   color: $main-color;
 }
+.course-info .register{
+  @extend .btn-default;
+}
 // password reset confirm
 .content-wrapper{
   text-align: center;
+}
+// dashboard
+a, a:visited{
+  color: $main-color;
+}
+.header-global .nav-global li a{
+  color: $main-color
+}
+.search-bar .search-button{
+  background: $main-color;
+  &:hover{
+    background: $hover-color;
+  }
 }
 /* ========================================================
   Name = espol theme
