--- a/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
@@ -13,18 +13,7 @@
   <div class="grid-manual grid-container">
     <div class="inner-container">
       <div class="row">
-        <div class="col col-12 sm-col-8">
-
-        </div>
-        <!-- <div class="col col-12 sm-col-4 mission-statement">
-            <img src="${static.url('images/user-thumbnail.png')}" alt="Mission Statement">
-            <p>"Lorem ipsum dolor sit amet, sea te quaeque suscipiantur. Nullam vituperata at his, usu ad solum augue.
-            Mel partem iudicabit te, an sed vocent offendit."</p>
-            <p>
-              <strong>Lorem ipsum</strong><br/>
-              Lorem ipsum, Lorem ipsum
-            </p>
-        </div> -->
+        <div class="col col-12 sm-col-8"></div>
       </div>
     </div>
   </div>
