Fixing error on review by fmo

--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -80,7 +80,7 @@
               ## can be included in the footer on other sites
               ## (e.g. a blog or marketing front-end) to provide a consistent
               ## user experience.  See the branding app for details.
-              <img alt="organization logo" src="/static/edxapp-espol/images/logo-white.png">
+              <img alt="organization logo" src="${static.url('images/logo-white.png')}">
             </a>
           </p>
 </div>
@@ -118,7 +118,7 @@
       </p>
       <p>
         <a href="#">
-          <img src="${static.url('logo-small.png')}" alt="eduNEXT" width="82" />
+          <img src="${static.url('images/logo-small.png')}" alt="eduNEXT" width="82" />
         </a>
       </p>
     </div>
