--- a/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
@@ -6,9 +6,7 @@
 
 <%block name="pagetitle">${_("About Us")}</%block>
 
-<div class="page-heading">
-  <!-- <h1><b>${_("About Us")}</b></h1> -->
-</div>
+<div class="page-heading"></div>
 <section class="static-content">
   <div class="grid-manual grid-container">
     <div class="inner-container">
