Adding href to edunext

--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -117,7 +117,7 @@
         </a>
       </p>
       <p>
-        <a href="#">
+        <a href="https://edunext.co">
           <img src="${static.url('images/logo-small.png')}" alt="eduNEXT" width="82" />
         </a>
       </p>
