--- a/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
+++ b/edx-platform/edxapp-espol/lms/templates/static_templates/about.html
@@ -5,13 +5,24 @@
 <%inherit file="../main.html" />
 
 <%block name="pagetitle">${_("About Us")}</%block>
-
-<div class="page-heading"></div>
+<div class="page-heading">
+  <h1><b>Acerca de</b></h1>
+</div>
 <section class="static-content">
   <div class="grid-manual grid-container">
     <div class="inner-container">
       <div class="row">
-        <div class="col col-12 sm-col-8"></div>
+        <div class="col col-12 sm-col-12">
+          <p>
+            La Escuela Superior Politécnica del Litoral, ESPOL, nace como una necesidad regional de contar con instituciones de educación superior científico-técnicas. Fue creada mediante Decreto Ejecutivo Nº 1664 expedido por el Presidente de la República, Dr. Camilo Ponce Enríquez, el 29 de octubre de 1958.
+          </p>
+          <p>
+            El 25 de mayo de 1959, en dos aulas de la Casona Universitaria ubicadas en la calle Chile, 51 estudiantes iniciaron clases con la dirección del primer Rector, Ing. Walter Camacho Navarro.
+          </p>
+          <p>
+            Cuenta con Facultades de Ciencias Naturales y Matemáticas, Ciencias Sociales y Humanísticas, Ciencias de la Tierra, Marítima Ciencias Biológicas , Oceánicas y Recursos Naturales, Mecánica y Ciencias de la Producción , Electricidad y computación, Diseño y Comunicación visual y Ciencias de la vida.
+          </p>
+        </div>
       </div>
     </div>
   </div>
