--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -125,8 +125,8 @@
         </a>
       </p>
       <p>
-        <a href="#">
-          <img src="${static.url('images/logo-small-dark.png')}" alt="eduNEXT" width="82" />
+        <a href="https://www.edunext.co/ES" target="_blank">
+          <img src="${static.url('images/logo-small-light.png')}" alt="eduNEXT" width="82" />
         </a>
       </p>
       <section class="social-feed">
