--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -1,7 +1,6 @@
 /*=====================================================
   Name = espol theme
   Author = @edunext | Miguel López - @Icemberth
-
   Description
   --------------------------------
   overrides for common elements: [header, footer, etc]
@@ -174,6 +173,10 @@ body header.header-global .logo img{
 }
 div.info-wrapper section.handouts a{
   text-align: left;
+  color: $main-color;
+}
+div.info-wrapper section.handouts ol li a{
+  color: $main-color;
 }
 // password reset confirm
 // Removed by fmo, because the implications are too broad
@@ -187,6 +190,15 @@ a, a:visited{
 .header-global .nav-global li a{
   color: $main-color
 }
+.dashboard .my-courses .course .details .enter-course{
+  color: $main-color;
+  border-color: $main-color;
+
+  &:hover{
+    background-color: $main-color;
+    color: #FFF !important
+  }
+}
 .search-bar .search-button{
   background: $main-color;
   &:hover{
@@ -197,11 +209,9 @@ a, a:visited{
   Name = espol theme
   Author = @edunext | Daniel Naranjo - @Bound3R
   Web = edunext.co
-
   Description
   -------------------------------------------------------
   overrides for common elemnts: [header, footer etc]
-
 ======================================================== */
 // header arrangements to imitate lms v2 (pattern library)
 body header.header-global,
@@ -254,6 +264,7 @@ body.index .content-wrapper {
   margin-top: 40px;
   padding: 20px 20px 0;
 }
+
 
 // couseware wrapper alignmed
 body.view-in-course .container {
