--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -125,7 +125,7 @@
         </a>
       </p>
       <p>
-        <a href="https://www.edunext.co/ES" target="_blank">
+        <a href="https://www.edunext.co/es/" target="_blank">
           <img src="${static.url('images/logo-small-light.png')}" alt="eduNEXT" width="82" />
         </a>
       </p>
