--- a/edx-platform/edxapp-espol/lms/templates/footer.html
+++ b/edx-platform/edxapp-espol/lms/templates/footer.html
@@ -104,7 +104,7 @@
               <a href="mailto:ayudaedxespol@espol.edu.ec">${_("Reportar Errores")}</a>
             </li>
             <li class="nav-legal-03">
-              <a href="http://www.serviciosti.espol.edu.ec">${_("Centro de Tecnologias de Informacion")}</a>
+              <a href="http://www.serviciosti.espol.edu.ec">${_("Gerencia de Tecnologías y Sistemas de Información")}</a>
             </li>
             <li class="nav-legal-04">
               <a href="http://www.espol.edu.ec">${_("ESPOL")}</a>
