--- a/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
+++ b/edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
@@ -436,3 +436,8 @@ section.outside-app h1 {
 .calc-main #calculator_wrapper form .input-wrapper #calculator_input {
   color: #222;
 }
+
+// Remove from view the stange bug in ORA added by https://github.com/edx/edx-ora2/commit/7568a7008706db6fee5d3081e455b6687d84d659
+.submission__answer__display__file .submission__answer__file__block:not(:first-child) {
+    display: none !important;
+}
